--- a/assets/html/highscores.html
+++ b/assets/html/highscores.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Highscores</title>
 
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
 
   <body>
@@ -14,10 +14,10 @@
       <h1>Highscores</h1>
       <ol id="highscores"></ol>
 
-      <a href="index.html"><button>Go Back</button></a>
+      <a href="../../index.html"><button>Go Back</button></a>
       <button id="clear">Clear Highscores</button>
     </div>
 
-    <script src="./assets/js/scores.js"></script>
+    <script src="../js/scores.js"></script>
   </body>
 </html>
